# mscan

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
benchmarks/: CMakeLists.txt
benchmarks/source/: scanf.cpp
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt
example/source/: example1.cpp
include/mscan/: casters.hpp  mscan.hpp
source/: mscan.cpp
test/: CMakeLists.txt
test/source/: mscan_test.cpp
